@@ -32,21 +32,21 @@ public class WebSocketConfig implements WebSocketMessageBrokerConfigurer {
 
     @Override
     public void configureMessageBroker(MessageBrokerRegistry config) {
-        config.enableSimpleBroker("/topic"); //
+        config.enableSimpleBroker("/topic"); // Enables simple broker for /topic destinations
         config.setApplicationDestinationPrefixes("/app");
-        // /app/chat
-        //server side: @MessageMapping("/chat")
+        // Client sends to /app/chat, /app/global/sendMessage, etc.
+        // Server publishes to /topic/room/{roomId}, /topic/global, etc.
     }
 
     @Override
     public void registerStompEndpoints(StompEndpointRegistry registry) {
-        registry.addEndpoint("/chat") //connection establishment handshake endpoint
-                .setAllowedOrigins(frontendUrl)//frontend origin
+        registry.addEndpoint("/chat") // WebSocket connection endpoint
+                .setAllowedOrigins(frontendUrl) // Allow frontend origin
                 .withSockJS();
     }
-    // /chat endpoint connection establish
+
     @Autowired
-    private JwtUtil jwtUtil; // Inject your JWT utility class
+    private JwtUtil jwtUtil;
 
     @Autowired
     private CustomUserDetailsService userDetailsService;
@@ -58,33 +58,55 @@ public class WebSocketConfig implements WebSocketMessageBrokerConfigurer {
             public Message<?> preSend(Message<?> message, MessageChannel channel) {
                 StompHeaderAccessor accessor = MessageHeaderAccessor.getAccessor(message, StompHeaderAccessor.class);
 
+                // 1. Handle CONNECTION (Authentication)
                 if (StompCommand.CONNECT.equals(accessor.getCommand())) {
                     List<String> authorizationHeaders = accessor.getNativeHeader("Authorization");
+                    List<String> guestHeaders = accessor.getNativeHeader("X-Guest-Mode");
+                    boolean isGuestMode = guestHeaders != null && !guestHeaders.isEmpty()
+                            && "true".equalsIgnoreCase(guestHeaders.getFirst());
 
                     String token = null;
                     if (authorizationHeaders != null && !authorizationHeaders.isEmpty()) {
-                        String bearerToken = authorizationHeaders.get(0);
+                        String bearerToken = authorizationHeaders.getFirst();
                         if (bearerToken != null && bearerToken.startsWith("Bearer ")) {
                             token = bearerToken.substring(7);
                         }
                     }
 
-                    // Use your jwtUtil methods here
-                    if (token != null && jwtUtil.validateToken(token)) { // Note: validateToken in JwtUtil takes UserDetails, but for CONNECT frame, you might not have it loaded yet. You can overload it or simplify.
-                        String userEmail = jwtUtil.getEmailFromToken(token);
+                    // A. Guest Mode: Allow connection, but User Principal remains NULL
+                    if (isGuestMode) {
+                        System.out.println("WebSocket CONNECT: Guest user connecting (Session ID: " + accessor.getSessionId() + ")");
+                        return message;
+                    }
 
+                    // B. Authenticated Mode: Validate Token
+                    if (token != null && jwtUtil.validateToken(token)) {
+                        String userEmail = jwtUtil.getEmailFromToken(token);
                         UserDetails userDetails = userDetailsService.loadUserByUsername(userEmail);
                         Authentication authentication = new UsernamePasswordAuthenticationToken(
-                                userDetails,
-                                null,
-                                userDetails.getAuthorities()
+                                userDetails, null, userDetails.getAuthorities()
                         );
                         accessor.setUser(authentication);
-                        System.out.println("WebSocket Authenticated User: " + userEmail + " (Session ID: " + accessor.getSessionId() + ")");
+                        System.out.println("WebSocket Authenticated User: " + userEmail);
                     } else {
-                        System.err.println("WebSocket CONNECT: Invalid or missing JWT for session " + accessor.getSessionId());
+                        System.err.println("WebSocket CONNECT: Invalid or missing JWT");
+                        // Optional: Throw exception to reject connection immediately
                     }
                 }
+
+                // 2. Handle SUBSCRIPTION (Security Gatekeeper) -- THIS WAS MISSING
+                if (StompCommand.SUBSCRIBE.equals(accessor.getCommand())) {
+                    String destination = accessor.getDestination();
+                    Authentication user = (Authentication) accessor.getUser();
+                    boolean isGuest = (user == null); // Guests have no Authentication object
+
+                    // BLOCK: If user is a Guest AND trying to access a private room
+                    if (isGuest && destination != null && destination.startsWith("/topic/room/")) {
+                        System.err.println("SECURITY ALERT: Guest tried to subscribe to private room: " + destination);
+                        throw new IllegalArgumentException("Guests are not allowed in private rooms.");
+                    }
+                }
+
                 return message;
             }
         });
